AC_INIT([proto],[2.0])
AC_PREREQ([2.68])                      #autoconf version >= 2.68
AC_CONFIG_SRCDIR([])                   #Safety: File must exist
AC_CONFIG_HEADERS([config.h])          #Make config header
AC_CONFIG_AUX_DIR([build-aux])         #Auxiliary file go here
AM_INIT_AUTOMAKE([1.11 -Wall -Werror]) #Init automake
AC_CONFIG_FILES([Makefile])            #"configure" creates Makefile
AC_PROG_CC                             #Find & probe C compiler
# Put various checks and such here.
AC_OUTPUT
